[package]
name = "ds"
version = "0.2.0"
authors = ["KenjiTakahashi <wozniakk@gmail.com>"]

[dependencies]
byteorder = "1.2.7"
clap = "2.21"  # This has to be in sync with version in "structopt" dep
concise = { path = "../concise", version = "0.2.1" }
crossbeam-channel = "0.3.2"
indexmap = "1.0.2"
itertools = "0.7.11"
lazy_static = "1.2.0"
lz4 = "1.23.1"
num_cpus = "1.8.0"
serde_json = { version = "1.0.33", features = ["preserve_order"] }
structopt = "0.2.13"

[dev-dependencies]
rand = "0.5.5"
